--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
       </section>
       <div class="schedule">
         <span class="schedule-time">с 10 до 20, ежедневно</span><br />
-        <span class="schedule-phone">8 812 450-25-25</span>
+        <a href="tel:88124502525" class="schedule-phone">8 812 450-25-25</a>
       </div>
     </header>
 
@@ -251,7 +251,7 @@
       </section>
       <section class="page-catalog">
         <ol class="page-list">
-          <li class="page-item active "><a href="#">1</a></li>
+          <li class="page-item active"><a href="#">1</a></li>
           <li class="page-item"><a href="#">2</a></li>
           <li class="page-item"><a href="#">3</a></li>
           <li class="page-item"><a href="#">4</a></li>
