--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
       <div class="schedule">
         <span class="schedule-time">с 10 до 20, ежедневно</span><br />
-        <span class="schedule-phone">8 812 450-25-25</span>
+        <a href="tel:88124502525" class="schedule-phone">8 812 450-25-25</a>
       </div>
     </header>
 
